Fix tooltip alignment

--- a/actionbuttonplus/actionbuttonplus.css
+++ b/actionbuttonplus/actionbuttonplus.css
@@ -74,7 +74,7 @@ body {
 .btn-wrap[data-tooltip]:not([data-tooltip=""])::after {
   content: attr(data-tooltip);
   position: absolute;
-  left: 0;
+  left: -6px;
   top: calc(100% - 4px);
   transform: none;
   background: #3b3b3b;
